proc-macros/tests/ui/incorrect/method/method_unexpected_field.stderr
error: `#[method]` got unknown `magic` argument. Supported arguments are `aliases`, `name`
 --> $DIR/method_unexpected_field.rs:6:2
  |
6 |     #[method(name = "foo", magic = false)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
